# MyActarEvents

./: .gitignore  CMakeLists.txt  MyActarEventsLinkDef.h
inc/: MChannel.h  MCoboAsad.h  MEvent.h  MEventReduced.h  Parameters.h
src/: DataParameters.cpp  MChannel.cpp  MCoboAsad.cpp  MEvent.cpp
